[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
nom = "7.1.1"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-iter = "0.1.43"
num-traits = "0.2.15"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["arbitrary_precision"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
